objects/fcio1__Fullcast_Holdout_Policy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Match_Action__c</fullName>
        <label>Opportunity Match Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stamp a Holdout</fullName>
                </value>
                <value>
                    <fullName>Transfer Immediately</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Match_Default_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Match Default User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fullcast_Holdout_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Match_Override_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Match Override Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Match_Role_on_Account__c</fullName>
        <label>Opportunity Match Role on Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Matched_Holdout_Days__c</fullName>
        <label>Opportunity Matched Holdout Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Ownership_Action_Match__c</fullName>
        <label>Opportunity Ownership Action Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Person in Role</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Role Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Ownership_Action_UnMatch__c</fullName>
        <label>Opportunity Ownership Action UnMatch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Person in Role</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Role Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_Query__c</fullName>
        <label>Opportunity Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_UnMatch_Action__c</fullName>
        <label>Opportunity UnMatch Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stamp a Holdout</fullName>
                </value>
                <value>
                    <fullName>Transfer Immediately</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_UnMatch_Override_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity UnMatch Override Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_UnMatch_Role_on_Account__c</fullName>
        <label>Opportunity UnMatch Role on Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity_UnMatched_Holdout_Days__c</fullName>
        <label>Opportunity UnMatched Holdout Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Target_Entity__c</fullName>
        <label>Target Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <externalId>true</externalId>
        <label>Territory External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipLabel>Fullcast Holdout Policies</relationshipLabel>
        <relationshipName>Fullcast_Holdout_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fullcast Holdout Policy</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fullcast Holdout Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Holdout Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>